force-app/main/default/objects/Fixed_Capital__c/Fixed_Capital__c.object-meta.xml
<CustomObject>
    <label>资产概况</label>
    <nameField>
        <displayFormat>FC-{0000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>