force-app/main/default/objects/Fixed_Capital__c/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <label>可用资金</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>