force-app/main/default/objects/Fixed_Capital__c/fields/CNY__c.field-meta.xml
<CustomField>
    <fullName>CNY__c</fullName>
    <formula>Floating_Value__c * 7.0602</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>浮动盈利(CNY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>