force-app/main/default/objects/Fixed_Capital__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <defaultValue>4967</defaultValue>
    <label>初始成本</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>