force-app/main/default/objects/Fixed_Capital__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>日期</label>
    <required>true</required>
    <type>Date</type>
</CustomField>