force-app/main/default/objects/Fixed_Capital__c/fields/Day_Float__c.field-meta.xml
<CustomField>
    <fullName>Day_Float__c</fullName>
    <label>当日浮动(USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>