force-app/main/default/objects/Fixed_Capital__c/fields/Floating_Value__c.field-meta.xml
<CustomField>
    <fullName>Floating_Value__c</fullName>
    <formula>Value__c -  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>浮动盈亏(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>