force-app/main/default/objects/Fixed_Capital__c/fields/Hold_Positions__c.field-meta.xml
<CustomField>
    <fullName>Hold_Positions__c</fullName>
    <formula>Total_Value_Securities__c /  Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>持仓</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>