force-app/main/default/objects/Fixed_Capital__c/fields/Purchasing_Power__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Power__c</fullName>
    <formula>Available_Funds__c * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>购买力</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>