force-app/main/default/objects/Fixed_Capital__c/fields/Total_Value_Securities__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Securities__c</fullName>
    <formula>Value__c -  Available_Funds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>证券总价值</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>