force-app/main/default/objects/Fixed_Capital__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>&apos;周&apos; + IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;1&apos;, &apos;一&apos;, 
        IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;2&apos;,&apos;二&apos;, 
        IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;3&apos;,&apos;三&apos;, 
        IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;4&apos;,&apos;四&apos;,
        IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;5&apos;, &apos;五&apos;, 
        IF(TEXT(WEEKDAY( TODAY() ) - 1) = &apos;6&apos;,&apos;六&apos;,&apos;天&apos;) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>星期</label>
    <type>Text</type>
</CustomField>