force-app/main/default/objects/Fixed_Capital__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <formula>(Value__c - Cost__c) /  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>收益率(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>