force-app/main/default/objects/Fixed_Capital__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Hold_Positions__c</columns>
    <columns>Cost__c</columns>
    <columns>Value__c</columns>
    <columns>Floating_Value__c</columns>
    <columns>Yield__c</columns>
    <columns>Total_Value_Securities__c</columns>
    <columns>Available_Funds__c</columns>
    <columns>Purchasing_Power__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>